--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "dependencies": {
     "cors": "^2.8.4",
     "datauri": "^1.1.0",
-    "discord-rpc": "^4.0.0",
+    "discord-rpc": "^4.0.1",
     "express": "^4.16.3",
     "hbs": "^4.0.1",
-    "request": "^2.87.0",
-    "request-promise-native": "^1.0.5",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^3.1.7"
   },
   "scripts": {
     "start": "node bin/soundcloud-rp",
