--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "soundcloud-rp",
-  "version": "2.0.3",
+  "name": "soundcloud-rpc",
+  "version": "3.0.0",
   "description": "Adds Discord Rich Presence support to Soundcloud.",
   "main": "src/index.js",
   "dependencies": {
