--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Adds Discord Rich Presence support to Soundcloud.",
   "main": "src/index.js",
   "dependencies": {
+    "@jojoblackfr/discord-rpc": "^4.1.0",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "datauri": "^4.1.0",
-    "discord-rpc": "^4.0.1",
     "express": "^4.21.1",
     "hbs": "^4.2.0",
-    "socket.io": "^4.8.0",
-    "axios": "^1.7.7"
+    "socket.io": "^4.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
